@@ -1,3 +1,8 @@
+Sun Jul 25 05:37:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* numeric.c (flo_cmp): honor the result of infinite? method of the
+	  other.  [ruby-core:31470]
+
 Wed Jul 21 15:22:17 2010  Evan Phoenix <evan@fallingsnow.net>
 
 	* lib/rubygems/custom_require.rb, gem_prelude.rb: Load code from
